--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <li class="name">
                 <h1>
                   <a href="#">
-                    Top Bar Title
+		    Liburuak
                   </a>
                 </h1>
               </li>
@@ -72,6 +72,8 @@
                     <li><a href="#">See all →</a></li>
                   </ul>
                 </li>
+		<li class="divider"></li>
+                <li><a href="#">Saioa hasi</a></li>
               </ul>
             </section>
           </nav>
@@ -86,18 +88,22 @@
    
  
         <div class="large-4 small-12 columns">
- 
-          <img src="http://placehold.it/500x500&text=Logo">
+          <img src="http://placehold.it/500x500&text=Azala">
  
           <div class="hide-for-small panel">
-            <h3>Header</h3>
-            <h5 class="subheader">Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Donec dignissim nibh fermentum odio ornare sagittis.
+            <h3>Titulua</h3>
+            <h5 class="subheader">Liburu garrantzitsu baten datuak.
             </h5>
           </div>
  
           <a href="#">
           <div class="panel callout radius">
-            <h6>99  items in your cart</h6>
+            <h6>Azken iruzkinak</h6>
+	    <ul>
+	      <li>bat</li>
+	      <li>bi</li>
+	      <li>hiru</li>	      
+	    </ul>
           </div>
           </a>
  
@@ -112,56 +118,56 @@
           <div class="row">
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/1000x1000&text=Thumbnail">
+              <img src="http://placehold.it/1000x1000&text=Azala">
  
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h5>Titulua</h5>
+                <h6 class="subheader">Datuak</h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placehold.it/500x500&text=Azala">
  
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h5>Titulua</h5>
+                <h6 class="subheader">Datuak</h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placehold.it/500x500&text=Azala">
  
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h5>Titulua</h5>
+                <h6 class="subheader">Datuak</h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placehold.it/500x500&text=Azala">
  
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h5>Titulua</h5>
+                <h6 class="subheader">Datuak</h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placehold.it/500x500&text=Azala">
  
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h5>Titulua</h5>
+                <h6 class="subheader">Datuak</h6>
               </div>
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="http://placehold.it/500x500&text=Azala">
  
               <div class="panel">
-                <h5>Item Name</h5>
-                <h6 class="subheader">$000.00</h6>
+                <h5>Titulua</h5>
+                <h6 class="subheader">Datuak</h6>
               </div>
             </div>
           </div>
