Azken iruzkinak itxura

--- a/index.html
+++ b/index.html
@@ -134,17 +134,26 @@
             </h5>
           </div>
  
-          <a href="#">
-          <div class="panel callout radius">
-            <h6>Azken iruzkinak</h6>
-	    <ul>
-	      <li>bat</li>
-	      <li>bi</li>
-	      <li>hiru</li>	      
-	    </ul>
-          </div>
-          </a>
- 
+
+          <h3>Azken iruzkinak</h3>
+	    <a href="#">
+	    <div class="panel radius">
+	      <h5>Liburu titulua</h5>
+	      <blockquote>Iruzkina hemen<cite>Erabiltzailea - Data</cite></blockquote>
+	    </div>
+	    </a>
+	    <a href="#">
+	    <div class="panel radius">
+	      <h5>Liburu titulua</h5>
+	      <blockquote>Iruzkina hemen<cite>Erabiltzailea - Data</cite></blockquote>
+	    </div>
+	    </a>
+	    <a href="#">
+	    <div class="panel radius">
+	      <h5>Liburu titulua</h5>
+	      <blockquote>Iruzkina hemen<cite>Erabiltzailea - Data</cite></blockquote>
+	    </div>
+	    </a>	    
         </div>
  
      
