--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="row">
-    <div class="large-12 columns">
+    <div class="large-12 columns" id="app">
  
      
  
@@ -308,6 +308,13 @@
     <script src="js/foundation.min.js"></script>
     <script>
       $(document).foundation();
+    </script>
+    <script src="react-0.9.0.js" type="text/javascript"></script>
+    <script src="out/goog/base.js" type="text/javascript"></script>
+    <script src="magnet.js" type="text/javascript"></script>
+    <script type="text/javascript">goog.require("magnet.core");</script>
+    <script type="text/javascript">
+     magnet.core.run();
     </script>
   </body>
 </html>
