alboko barra pantaila txikietan kendu

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       <!-- erdia -->
       <div class="row">
 	<!-- alboko-barra -->
-        <div class="medium-4 small-12 columns">
+        <div class="medium-4 small-12 columns hide-for-small">
           <img src="http://placehold.it/500x500&text=Azala">
-          <div class="hide-for-small panel">
+          <div class="panel">
             <h3>Titulua</h3>
             <h5 class="subheader">Liburu garrantzitsu baten datuak.
             </h5>
