--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -78,87 +78,9 @@
 
 	<!-- nagusia -->
         <div class="medium-8 columns">
-          <div class="row">
-            <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
- 
-            <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
- 
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
- 
-            <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
- 
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
- 
-            <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
- 
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
- 
-            <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
- 
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
- 
-            <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
- 
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
-
-            <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
- 
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
-
-	    <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
-	      
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
-
-	    <div class="medium-4 small-6 columns">
-              <img src="img/liburua.jpg">
-	      
-              <div class="panel">
-                <h5>Titulua</h5>
-                <h6 class="subheader">Datuak</h6>
-              </div>
-            </div>
-          </div>
+	  <div class="row">
+	    <h1>Kargatzen...</h1>
+	  </div>
         </div>
       </div>
  
