Konfigurazioa index.html bidez pasa

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -122,7 +122,7 @@
     <script src="magnet.js" type="text/javascript"></script>
     <script type="text/javascript">goog.require("magnet.core");</script>
     <script type="text/javascript">
-     magnet.core.run(true, "localhost", 3000);
+     magnet.core.run(true, "localhost", 3000, 25, 10, 9);
     </script>
   </body>
 </html>
