--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -123,7 +123,7 @@
     <script type="text/javascript">goog.require("magnet.core");</script>
     <script src="konfig.js" type="text/javascript"></script>
     <script type="text/javascript">
-     magnet.core.run(konfig.dev, konfig.zerbitzaria, konfig.portua,
+     magnet.core.run(konfig.figwheel, konfig.zerbitzaria, konfig.portua,
 		     konfig.azken_gogoko_kopurua, konfig.azken_iruzkin_kopurua, konfig.liburu_orriko);
     </script>
   </body>
