liburutruk izena erabili

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Magnet loturak</title>
+    <title>Liburutruk</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -22,7 +22,7 @@
               <li class="name">
                 <h1>
                   <a href="#">
-		    Liburuak
+		    Liburutruk
                   </a>
                 </h1>
               </li>
